--- a/form.css
+++ b/form.css
@@ -2,7 +2,7 @@
 .form-style-4{
 	width: 450px;
 	font-size: 16px;
-	background: #495C70;
+	background: #debef2;
 	padding: 30px 30px 15px 30px;
 	border: 5px solid #53687E;
 }
